src/objects/SFDC_Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Benefit_Plan__c</fullName>
        <label>Benefit Plan</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Benefit_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>Health Savings</fullName>
                </value>
                <value>
                    <fullName>Medicaid</fullName>
                </value>
                <value>
                    <fullName>Medicare</fullName>
                </value>
                <value>
                    <fullName>CHiP</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <label>Benefit Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Health Insurance</fullName>
                </value>
                <value>
                    <fullName>Dental Insurance</fullName>
                </value>
                <value>
                    <fullName>Vision Insurance</fullName>
                </value>
                <value>
                    <fullName>Life Insurance</fullName>
                </value>
                <value>
                    <fullName>401k</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee</label>
        <referenceTo>SFDC_Employee__c</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>R00N30000001eUPLEA2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Months_for_Plan__c</fullName>
        <label># Months for Plan</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plan_End_Date__c</fullName>
        <formula>Plan_Start_Date__c  + Months_for_Plan__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Plan End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Start_Date__c</fullName>
        <label>Plan Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Request_Date__c</fullName>
        <label>Request Date</label>
        <type>Date</type>
    </fields>
    <label>Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Employee__c</columns>
        <columns>Benefit_Type__c</columns>
        <columns>Benefit_Plan__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllDentalHealthPlans</fullName>
        <columns>Employee__c</columns>
        <columns>NAME</columns>
        <columns>Benefit_Plan__c</columns>
        <columns>Request_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Benefit_Type__c</field>
            <operation>equals</operation>
            <value>Dental Insurance</value>
        </filters>
        <label>All Dental Health Plans</label>
    </listViews>
    <listViews>
        <fullName>AllHealthInsuranceBenefits</fullName>
        <columns>Employee__c</columns>
        <columns>Benefit_Plan__c</columns>
        <columns>Plan_Start_Date__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Benefit_Type__c</field>
            <operation>equals</operation>
            <value>Health Insurance</value>
        </filters>
        <label>All Health Insurance Benefits</label>
    </listViews>
    <nameField>
        <displayFormat>BENEFIT-{00000}</displayFormat>
        <label>Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>